--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -7,7 +7,7 @@
   <body>
     <h1>RunBreeze</h1>
     <p>以下のリンクをクリックして、パスワードをリセットしてください。</p>
-    <p><%= link_to 'パスワードをリセット', edit_password_url(resource, reset_password_token: @token) %></p>
+    <%= link_to 'パスワードをリセット', edit_password_url(@resource, reset_password_token: @token) %>
     <p>このリンクは30分以内に有効です。</p>
     <p>もし心当たりがない場合は、このメールを無視してください。</p>
   </body>
