--- a/app/views/users/mypage.html.erb
+++ b/app/views/users/mypage.html.erb
@@ -1,21 +1,20 @@
 <div class="space-y-6">
 
-<!-- プロフィール情報セクション -->
-<div class="bg-base-100 p-6 rounded-lg shadow-md flex flex-col items-center space-y-4">
-  <%= image_tag @user.profile_image.present? ? @user.profile_image.url : 'default_profile_image.png', 
-    alt: "プロフィール画像", 
-    class: "rounded-full w-24 h-24" %>
-  <h2 class="text-xl font-bold text-gray-700"><%= @user.username %></h2>
-  <div class="flex justify-center gap-4">
-    <%= link_to 'プロフィールを編集', edit_profile_path, class: "btn btn-primary text-base-100" %>
-    <%= link_to 'パスワードを変更', edit_password_path, class: "btn btn-secondary text-base-100" %>
+  <!-- プロフィール情報セクション -->
+  <div class="bg-base-100 p-6 rounded-lg shadow-md flex flex-col items-center space-y-4">
+    <%= image_tag @user.profile_image.present? ? @user.profile_image.url : 'default_profile_image.png', 
+      alt: "プロフィール画像", 
+      class: "rounded-full w-24 h-24" %>
+    <h2 class="text-xl font-bold text-gray-700"><%= @user.username %></h2>
+    <div class="flex justify-center gap-4">
+      <%= link_to 'プロフィールを編集', edit_profile_path, class: "btn btn-primary btn-xs text-base-100" %>
+    </div>
   </div>
-</div>
 
   <!-- ランニング情報セクション -->
   <div class="bg-base-100 p-6 rounded-lg shadow-md">
     <h3 class="text-xm font-semibold mb-4 text-gray-700">ランニング情報</h3>
-    <p class=" text-xm text-gray-700 mb-2">
+    <p class="text-xm text-gray-700 mb-2">
       <strong>目的:</strong> 
       <%= @user.running_goal.present? ? @user.running_goal : '<span class="text-gray-700">未設定</span>'.html_safe %>
     </p>
@@ -55,4 +54,10 @@
       <p class="text-gray-500">まだ投稿がありません。</p>
     </div>
   <% end %>
-  </div>
+</div>
+
+<!-- パスワードリセットリンク -->
+<div class="mt-6 text-center text-sm text-gray-500">
+  <p>パスワードを忘れた場合は、以下のリンクからリセットしてください。</p>
+  <%= link_to "パスワードをリセットする", new_user_password_path, class: "text-gray-600 hover:text-primary hover:underline" %>
+</div>
