Devise関連ビューの調整

--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,14 +1,9 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8">
-    <title>パスワードリセットのご案内</title>
-  </head>
-  <body>
-    <h1>RunBreeze</h1>
-    <p>以下のリンクをクリックして、パスワードをリセットしてください。</p>
-    <%= link_to 'パスワードをリセット', edit_password_url(@resource, reset_password_token: @token) %>
-    <p>このリンクは30分以内に有効です。</p>
-    <p>もし心当たりがない場合は、このメールを無視してください。</p>
-  </body>
-</html>
+<!-- app/views/devise/mailer/reset_password_instructions.html.erb -->
+
+<p><%= @resource.username %>様</p>
+
+<p>パスワード再設定のご依頼を受け付けました。</p>
+
+<p>こちらのリンクからパスワードの再発行を行ってください。</p>
+
+<p><%= link_to 'パスワードを再設定する', edit_user_password_url(reset_password_token: @token) %></p>
