--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -30,7 +30,7 @@
 
         <!-- パスワード確認入力 -->
         <div class="form-control">
-          <%= f.label :password_confirmation, "パスワード（再入力）", class: "block text-sm font-medium text-gray-700" %>
+          <%= f.label :password_confirmation, "パスワードの確認", class: "block text-sm font-medium text-gray-700" %>
           <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "input input-bordered w-full bg-gray-100 focus:bg-white text-sm mt-1", placeholder: "パスワード（再入力）" %>
         </div>
 
