--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,21 +1,41 @@
-<h2 class="text-3xl font-bold text-center mb-6">新しいパスワードの設定</h2>
-
-<%= form_with(model: resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <div class="form-control mb-4">
-    <%= f.label :password, "新しいパスワード", class: "label" %>
-    <%= f.password_field :password, autocomplete: "new-password", class: "input input-bordered w-full bg-gray-100 focus:bg-white" %>
+<div class="container mx-auto max-w-4xl px-4 py-8 text-gray-700 space-y-8">
+  <!-- パスワードリセットタイトル -->
+  <div>
+    <h1 class="mt-6 text-center text-xl font-bold text-gray-700">新しいパスワードの設定</h1>
   </div>
 
-  <div class="form-control mb-6">
-    <%= f.label :password_confirmation, "新しいパスワードの確認", class: "label" %>
-    <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "input input-bordered w-full bg-gray-100 focus:bg-white" %>
+  <!-- エラーメッセージの表示 -->
+  <%= render "shared/error_messages", resource: resource %>
+
+  <!-- パスワードリセットフォーム -->
+  <div class="bg-white p-6 rounded-lg shadow-md">
+    <%= form_with(model: resource, as: resource_name, url: password_path(resource_name), html: { method: :put, data: { turbo: false } }) do |f| %>
+      <div class="space-y-4">
+        <!-- パスワードリセットトークン（非表示フィールド） -->
+        <%= f.hidden_field :reset_password_token %>
+
+        <!-- 新しいパスワード入力 -->
+        <div class="form-control">
+          <%= f.label :password, "新しいパスワード", class: "block text-sm font-medium text-gray-700" %>
+          <%= f.password_field :password, autocomplete: "new-password", class: "input input-bordered w-full bg-gray-100 focus:bg-white text-sm mt-1", placeholder: "新しいパスワード(4文字以上)" %>
+        </div>
+
+        <!-- 新しいパスワード確認入力 -->
+        <div class="form-control">
+          <%= f.label :password_confirmation, "新しいパスワードの確認", class: "block text-sm font-medium text-gray-700" %>
+          <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "input input-bordered w-full bg-gray-100 focus:bg-white text-sm mt-1", placeholder: "新しいパスワード（再入力）" %>
+        </div>
+
+        <!-- パスワード更新ボタン -->
+        <div class="form-control">
+          <%= f.submit "パスワードを更新", class: "btn btn-primary w-full text-base-100 mt-4 hover:bg-primary-focus transition-colors duration-200" %>
+        </div>
+      </div>
+    <% end %>
   </div>
 
-  <div class="form-control">
-    <%= f.submit "パスワードを更新", class: "btn btn-primary w-full" %>
+  <!-- ログイン画面へのリンク -->
+  <div class="mt-4 text-center">
+    <%= link_to "ログインに戻る", new_user_session_path, class: "text-sm link link-primary" %>
   </div>
-<% end %>
-
-<div class="mt-4 text-center">
-  <%= link_to "ログインに戻る", new_session_path(resource_name), class: "link link-primary" %>
 </div>
