--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -84,7 +84,8 @@
 
     <!-- 送信ボタン -->
     <div class="flex justify-end space-x-2 mt-4">
-      <%= link_to "キャンセル", cancel_path, class: "btn btn-secondary text-base-100" %>
+      <%= link_to "キャンセル", cancel_path, class: "btn text-gray-700" %>
+      <%= form.submit "下書き保存", name: "draft_save", class: "btn btn-secondary text-base-100" %>
       <%= form.submit submit_button_text, class: "btn btn-primary text-base-100" %>
     </div>
   <% end %>
