メインページとフッターとの間隔を大きくした

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,6 +32,8 @@
       <%= render 'shared/before_header_login' %>
     <% end %>
     <%= render 'shared/flash_messages' %>
+
+    <main class="flex-grow mb-32">
     <%= yield %>
     <%= render "shared/footer" %>
   </body>
