--- a/app/views/kaminari/_next_page.html.erb
+++ b/app/views/kaminari/_next_page.html.erb
@@ -1,3 +1,3 @@
 <span class="next">
-  <%= link_to_unless current_page.last?, "次へ", url, class: "join-item btn btn-sm btn-outline", rel: 'next', remote: true %>
+  <%= link_to_unless current_page.last?, "次へ", url, class: "join-item btn btn-sm #{'btn-primary text-white' if current_page.last?}", rel: 'next', remote: true %>
 </span>
