--- a/app/views/shared/_before_header_login.html.erb
+++ b/app/views/shared/_before_header_login.html.erb
@@ -37,6 +37,10 @@
           <%= link_to 'お問い合わせ', "https://forms.gle/YMuTma5zqtiNunGaA", class: "btn btn-ghost w-full text-left text-gray-700 hover:bg-gray-100 rounded-md" %>
         </li>
         <hr class="border-gray-200">
+        <!-- シェアボタンの追加 -->
+        <li>
+          <%= render 'shared/share_button' %>
+        </li>
         <li class="text-center text-xs mt-2 text-gray-500">&copy; 2024 RunBreeze</li>
       </ul>
     </div>
